--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $color-secondary:#5ebc64;
 $color-tertiary:#c5e8fb;
 $color-button:#28aae4;
 $color-text:#221f20;
+$color-grey:#f0f1f1;
 $color-white: #fff;
 $color-black: #000;
 
@@ -11,4 +12,4 @@ $fontPrimary:"Poppins", sans-serif;
 $fontSecondary:"Playfair Display", serif;
 $fontTertiary:"Chintya";
 
-$mainBg:url(../../images/main-bg-01.jpg);
+$mainBg:url(../images/main-bg-01.jpg);
