--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,13 @@
 @import "./base/utilities";
 
 @import "./component/heroSection";
+@import "./component/registration-form";
 @import "./component/welcomeArea";
 
 @import "./layout/footer";
 @import "./layout/header";
 
 @import "./pages/home";
+@import "./pages/about";
+@import "./pages/pricing";
+@import "./pages/program";
