--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,8 +2,8 @@
 
 @font-face {
     font-family: 'Chintya';
-    src: url('../../font/ChintyaDemo.woff2') format('woff2'),
-        url('../../font/ChintyaDemo.woff') format('woff');
+    src: url('../font/ChintyaDemo.woff2') format('woff2'),
+        url('../font/ChintyaDemo.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -29,13 +29,25 @@ h6 {
 .heading-primary {
     font-size: 3.6rem;
 text-transform: capitalize;
-margin-bottom: 3rem;
+margin-bottom: 1rem;
+margin-top: 0;
 line-height: 1.3;
-padding-bottom: 1rem;
-border-bottom: 5px solid $color-primary;
 @include respond (maxWidth1200){
     br{
         display: none;
     }
 }
+}
+.heading-tertiary{
+    text-align: center;
+    font-weight: bold;
+    font-family: $fontPrimary;
+    margin-top: 2rem;
+}
+.heading-four{
+    text-align: center;
+    font-weight: bold;
+    font-size: 2.4rem;
+    font-family: $fontSecondary;
+    margin-top: 2rem;
 }
