--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -42,16 +42,51 @@
     padding: 6px 16px;
     display: inline-block;
     text-decoration: none;
+    transition: 0.4s;
     &:hover{
         text-decoration: none;
+        background: $color-primary;
+    }
+}
+
+@mixin globalBtnTHree{
+    background: $color-button;
+    color: $color-white;
+    text-transform: capitalize;
+    padding: 6px 25px 6px 16px;
+    display: inline-block;
+    margin-top: 5rem;
+    text-decoration: none;
+    border-radius: 3px;
+    position: relative;
+    &::after{
+        content: "";
+        background-image: url(../images/btn-bg.png);
+        position: absolute;
+        right: -10px;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: right;
+        transform: scale(1.4);
+        filter: drop-shadow(0px 0px 3px #33333384);
+    }
+    &:hover{
+        text-decoration: none;
+        color: $color-white
     }
 }
 
 @mixin globalBtnTwo{
     @include globalBtnOne;
-    border-radius: 10rem;
+    border-radius: 3px;
     width: 20rem;
     @include respond (maxWidth575){
         width: auto;
     }
+}
+@mixin submitbutton{
+    @include globalBtnTwo;
 }
