--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -106,3 +106,15 @@
         }
     }
 }
+
+input[type="number"]:hover::-webkit-inner-spin-button,
+input[type="number"]:hover::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+    display: none;
+}
+input:-webkit-autofill {
+    background-color: white !important;
+    -webkit-box-shadow: 0 0 0 50px white inset !important;
+    -webkit-text-fill-color: #000 !important;
+}
