--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -144,9 +144,14 @@ header {
 
             .nav-button {
                 color: $color-white;
-                background: $color-primary;
-                padding: 8px 16px;
+                background: $color-button;
+                padding: 6px 16px;
                 margin-left: 10px;
+                border-radius: 3px;
+                transition: 0.4s;
+                &:hover{
+                    background: $color-primary;
+                }
 
                 @include respond (maxWidth768) {
                     width: auto;
