--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -119,6 +119,10 @@
                     border-top: 1px solid rgba($color-text, 0.3);
                     border-bottom: 1px solid rgba($color-text, 0.3);   
                 }
+                .content-para{
+                    text-align: center;
+                    padding: 0 1.5rem;
+                }
             }
         }
     }
