--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $color-black: #000;
 
 $fontPrimary:"Poppins", sans-serif;
 $fontSecondary:"Playfair Display", serif;
-$fontTertiary:"Chintya";
+// $fontTertiary:"Chintya";
+$fontFour:"Nexa";
 
 $mainBg:url(../images/main-bg-01.jpg);
