--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -5,3 +5,12 @@
     to {
       transform: translateY(0);
       opacity: 1; } }
+
+      @keyframes rotate {
+        0% {
+          transform: rotate(-360deg);
+      }
+      100% {
+        transform: rotate(360deg);
+    }
+      }
