--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./base/utilities";
 
 @import "./component/heroSection";
+@import "./component/international-visionrs";
 @import "./component/registration-form";
 @import "./component/welcomeArea";
 
