--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @font-face {
-    font-family: 'Chintya';
-    src: url('../font/ChintyaDemo.woff2') format('woff2'),
-        url('../font/ChintyaDemo.woff') format('woff');
+    font-family: 'Nexa';
+    src: url('../font/Nexa-Bold.woff') format('woff2'),
+        url('../font/Nexa-Bold.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'mostiva-bold';
+    src: url('../font/Mosvita-Bold.woff2') format('woff2'),
+        url('../font/Mosvita-Bold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -43,6 +52,7 @@ line-height: 1.3;
     font-weight: bold;
     font-family: $fontPrimary;
     margin-top: 2rem;
+    font-size: 1.8rem;
 }
 .heading-four{
     text-align: center;
