--- a/sass/component/_heroSection.scss
+++ b/sass/component/_heroSection.scss
@@ -28,13 +28,14 @@
                 position: relative;
 
                 &::before {
-                    @include vector(111.4px, 109.32px);
-                    left: 83px;
-                    top: -9.9rem;
+                    @include vector(69.4px, 70.32px);
+                    right: 120px;
+                    top: -60%;
+                    transform: translate(0, -100%);
                     @include respond (maxWidth1200) {
                         @include vector(80.4px, 79.32px);
                         left: 62px;
-                        top: -7.9rem;
+                        top: 0;
                     }
                     @include respond (maxWidth992){
                         left: 30px;
@@ -45,9 +46,9 @@
                 }
 
                 &::after {
-                    @include vector(162.4px, 167.32px);
-                    right: -14px;
-                    bottom: -144px;
+                    @include vector(69.4px, 70.32px);
+                    right: 20px;
+                    bottom: -80px;
                     @include respond (maxWidth1200) {
                         @include vector(92.4px, 87.32px);
                         right: 40px;
@@ -58,13 +59,42 @@
                     }
                 }
 
+                h6{
+                    color: $color-white;
+                    background: $color-primary;
+                    padding: 7.5px 15px;
+                    display: block;
+                    width: fit-content;
+                    margin: 0 auto;
+                    font-family: $fontFour;
+                    font-size: 28px;
+    letter-spacing: 11.5px;
+    text-shadow: 2px 2px 1px #02768a;
+                    @include respond (maxWidth1200){
+                        font-size: 20px;
+                    }
+                    @include respond (maxWidth992){
+                        font-size: 18px;
+                    }
+                    @include respond (maxWidth768){
+                        font-size: 20px;
+        line-height: 1.5;
+        letter-spacing: 3px;
+                    }
+                }
+
                 h1 {
-                    font-family: $fontTertiary;
+                    font-family: $fontFour;
                     text-transform: capitalize;
                     color: $color-primary;
-                    font-size: 73px;
+                    font-size: 68px;
                     letter-spacing: 0.78px;
+                    font-weight: 300;
+                    text-align: center;
                     margin: 0;
+                    span{
+                        color: $color-secondary;
+                    }
                     @include respond (maxWidth1200){
                         font-size: 53px;
                     }
@@ -73,12 +103,51 @@
                     }
                 }
 
+                h4 {
+                    text-align: center;
+                    font-size: 24px;
+                    text-transform: capitalize;
+                    color: $color-text;
+                    font-family: "mostiva-bold";
+                    margin: 0;
+                    position: relative;
+                    &::before {
+                        @include vector(162.4px, 167.32px);
+                        left: 83px;
+                        transform: translateY(40%);
+                        @include respond (maxWidth1200) {
+                            @include vector(80.4px, 79.32px);
+                            left: 62px;
+                            top: 50px;
+                        }
+                        @include respond (maxWidth992){
+                            left: 30px;
+                        }
+                        @include respond (maxWidth768){
+                            display: none;
+                        }
+                    }
+                    @include respond (maxWidth1200){
+                        font-size: 40px;
+                    }
+                    @include respond (maxWidth992){
+                        font-size: 30px;
+                    }
+                }
+
                 h3 {
                     text-align: center;
-                    font-size: 58px;
+                    font-size: 24px;
                     text-transform: capitalize;
-                    color: $color-secondary;
-                    margin: 0;
+                    display: block;
+                    border-top: 1px solid $color-text;
+                    border-bottom: 1px solid $color-text;
+                    padding: 10px;
+                    margin: 10px auto 20px;
+                    width: fit-content;
+                    color: $color-text;
+                    font-family: "mostiva-bold";
+                    
                     @include respond (maxWidth1200){
                         font-size: 40px;
                     }
@@ -96,6 +165,15 @@
                 margin-left: auto;
                 border-radius: 100%;
                 position: relative;
+                .boundless-future{
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    width: 20rem;
+                    height: auto;
+                    border-radius: 0;
+                }
                 @include respond (maxWidth1200){
                     width: 40rem;
                     height: 40rem;
