--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,7 +4,8 @@
     .sustaible-grid {
         display: grid;
         grid-template-columns: 53% 45%;
-        @include respond (maxWidth768){
+
+        @include respond (maxWidth768) {
             grid-template-columns: auto;
         }
     }
@@ -15,24 +16,29 @@
         margin-top: 2rem;
         margin-bottom: 2rem;
         border-radius: 100%;
-        @include respond (maxWidth575){
+
+        @include respond (maxWidth575) {
             width: auto;
             height: auto;
             border-radius: 1rem;
             margin-top: 1rem;
-            img{
-                border-radius: 1rem!important;
+
+            img {
+                border-radius: 1rem !important;
             }
         }
-        @include respond (maxWidth768){
+
+        @include respond (maxWidth768) {
             margin-left: auto;
             margin-right: auto;
             outline: none;
             border: 2rem solid $color-tertiary;
         }
-        @include respond (minWidth768){
+
+        @include respond (minWidth768) {
             transform: translateX(28%);
         }
+
         outline: 6rem solid $color-tertiary;
 
         img {
@@ -43,31 +49,40 @@
         }
     }
 }
-.signature-strength{
+
+.signature-strength {
     background: $color-tertiary;
-    .signature-grid{
+
+    .signature-grid {
         display: grid;
         gap: 3rem;
         grid-template-columns: repeat(3, 1fr);
-        @include respond (maxWidth768){
+
+        @include respond (maxWidth768) {
             grid-template-columns: repeat(1, 1fr);
         }
-        .signature-grid-item{
-            &:nth-child(4), &:nth-child(5){
+
+        .signature-grid-item {
+
+            &:nth-child(4),
+            &:nth-child(5) {
                 position: relative;
-        &::before{
-            @include vector(84.2px, 84px);
-            mix-blend-mode: plus-lighter;
-            top: -9%;
-    right: -17%;
-    @include respond (maxWidth768){
-        right: 0;
-    transform: scale(0.5);
-    }
-        }
+
+                &::before {
+                    @include vector(84.2px, 84px);
+                    mix-blend-mode: plus-lighter;
+                    top: -9%;
+                    right: -17%;
+
+                    @include respond (maxWidth768) {
+                        right: 0;
+                        transform: scale(0.5);
+                    }
+                }
             }
-            .card-strenth{
-                .img-wrapper{
+
+            .card-strenth {
+                .img-wrapper {
                     width: 100%;
                     aspect-ratio: 1;
                     margin: auto;
@@ -75,35 +90,40 @@
                     background: $color-white;
                     border-radius: 100%;
                     position: relative;
-                    img{
+
+                    img {
                         width: 100%;
                         height: 100%;
                         border-radius: inherit;
                     }
-                    &::before{
+
+                    &::before {
                         content: "";
                         background: rgba($color-black, 0.3);
                         position: absolute;
                         top: 50%;
-    left: 50%;
-    width: calc(100% - 6rem);
-    height: calc(100% - 6rem);
-    border-radius: 100%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    transition: all 0.4s;
+                        left: 50%;
+                        width: calc(100% - 6rem);
+                        height: calc(100% - 6rem);
+                        border-radius: 100%;
+                        transform: translate(-50%, -50%);
+                        opacity: 0;
+                        transition: all 0.4s;
                     }
-                    &:hover{
-                        &::before{
+
+                    &:hover {
+                        &::before {
                             opacity: 1;
                         }
-                        .wrapperText{
+
+                        .wrapperText {
                             transform: translate(-50%, -50%);
                             opacity: 1;
                         }
                     }
                 }
-                .wrapperText{
+
+                .wrapperText {
                     position: absolute;
                     top: 50%;
                     left: 50%;
@@ -114,12 +134,14 @@
                     opacity: 0;
                     transition: all 0.4s;
                 }
-                .heading-tertiary{
+
+                .heading-tertiary {
                     padding: 1rem;
                     border-top: 1px solid rgba($color-text, 0.3);
-                    border-bottom: 1px solid rgba($color-text, 0.3);   
+                    border-bottom: 1px solid rgba($color-text, 0.3);
                 }
-                .content-para{
+
+                .content-para {
                     text-align: center;
                     padding: 0 1.5rem;
                 }
@@ -127,25 +149,131 @@
         }
     }
 }
-.educational-visioners{
-    .educational-grid{
+
+.educational-visioners {
+    .globalbtn-one{
+        @include globalBtnTwo;
+        display: none;
+    }
+    .modal{
+
+        .modal-dialog{
+            max-width: 100%;
+            padding: 0;
+            @include respond (minWidth992){
+                width: 800px;
+            }
+            @include respond (maxWidth575){
+                width: 90%;
+            }
+            @include respond (maxWidth992){
+                width: 500px;
+            }
+        }
+        .modal-content{
+            border: 0;
+            border-radius: 0;
+            width: 100%;
+            height: 80vh;
+            overflow: auto;
+            padding: 0;
+            position: relative;
+        }
+        button{
+            position: absolute;
+right: 0;
+top: 0;
+        }
+        .modal-body{
+            padding: 0;
+        }
+    }
+    .committee-wrapper{
+        .popup-img-wrapper{
+            padding-top: 3rem;
+            position: relative;
+            img{
+                display: block;
+                width: 23.6rem;
+                height: 23.6rem;
+                aspect-ratio: 1;
+                border-radius: 100%;
+                margin: 0 auto 1rem auto;
+                position: relative;
+                z-index: 1;
+                border: 4px solid #28aae4;
+                object-position: top;
+    outline: 4px solid #ffffff;
+            }
+            &::before{
+                content: "";
+                background: $color-button;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                clip-path: polygon(0 0, 100% 0%, 100% 30%, 50% 80%, 0 30%);
+                z-index: 0;
+            }
+            &::after{
+                content: "";
+                background: url(https://dignityeducation.org/fellowship/image/bg-01.jpg);
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                clip-path: polygon(0 0, 100% 0%, 100% 30%, 50% 80%, 0 30%);
+                z-index: 0;
+                background-size: cover;
+                background-position: bottom;
+                mix-blend-mode: multiply;
+    opacity: 0.2;
+            }
+        }
+        .content-wrapper{
+            padding: 0 2rem 0;
+            p{
+                padding-bottom: 2rem;
+            }
+        }
+        
+    }
+    .educational-grid {
         display: grid;
         gap: 6rem;
         grid-template-columns: repeat(4, 1fr);
-        @include respond (maxWidth992){
+
+        .heading-tertiary{
+            transition: all 0.3s;
+            a{
+                color: inherit;
+                text-decoration: none;
+            }
+            &:hover{
+                color: $color-button;
+                cursor: pointer;
+            }
+        }
+
+        @include respond (maxWidth992) {
             grid-template-columns: repeat(2, 1fr);
         }
-        @include respond (maxWidth575){
+
+        @include respond (maxWidth575) {
             grid-template-columns: repeat(1, 1fr);
         }
-        .img-wrapper{
+
+        .img-wrapper {
             width: 100%;
-    aspect-ratio: 1;
+            aspect-ratio: 1;
             border-radius: 100%;
             overflow: hidden;
             border: 5px solid $color-tertiary;
             margin: auto;
-            img{
+
+            img {
                 width: 100%;
                 height: 100%;
                 object-position: top;
@@ -153,7 +281,61 @@
         }
     }
 }
-.globalbtn-three{
+
+.globalbtn-three {
     @include globalBtnTHree;
     display: none;
+}
+
+.online-counselling {
+    position: fixed;
+    left: 0;
+    top: 50%;
+    transform: rotate(-90deg) translateY(50%) translateX(-50%);
+    transform-origin: left center;
+    border-radius: 5px;
+    z-index: 9;
+    @include respond (maxWidth575){
+        transform: none;
+        bottom: 0;
+        top: auto;
+        width: 100%;
+        
+    }
+
+    a {
+        background: $color-button;
+        padding: 1rem 2rem;
+        color: $color-white;
+        text-decoration: none;
+        font-size: 1.6rem;
+        border: none;
+        display: block;
+        transition: all 0.3s;
+        box-shadow:  
+        -1px 0 0 $color-primary,
+        -2px -1px 0 $color-primary,
+        -3px -2px 0 $color-primary,
+        -4px -3px 0 $color-primary,
+        -5px -4px 0 $color-primary,
+        -6px -5px 0 $color-primary,
+        -7px -6px 0 $color-primary,
+        -8px -7px 0 $color-primary;
+        @include respond (maxWidth575) {
+            padding: 0.8rem 1.5rem;
+            font-size: 2rem;
+            text-transform: uppercase;
+            display: block;
+            font-weight: bold;
+            text-align: center;
+            box-shadow: none;
+            
+        }
+
+        &:hover {
+            text-decoration: none;
+            background: darken($color-button, $amount: 5);
+        }
+    }
+
 }
