--- a/sass/pages/_pricing.scss
+++ b/sass/pages/_pricing.scss
@@ -1,12 +1,11 @@
 .why-lumina{
-    background: $color-tertiary;
     h2{
         position: relative;
         &::after{
             @include vector(81px, 80px);
             right: 0;
             bottom: -1rem;
-            mix-blend-mode: color-dodge;
+            // mix-blend-mode: color-dodge;
         }
     }
     .img-wrapper{
@@ -21,7 +20,7 @@
                 object-position: bottom;
             }
             @include respond (minWidth1200){
-                height: 50rem;
+                height: 32rem;
     width: 100%;
     object-position: bottom;
             }
@@ -29,9 +28,10 @@
     }
 }
 .mission-vision{
-@include respond (minWidth768){
-    background: linear-gradient(90deg, $color-grey 20%, $color-white 20%, $color-white 80%, $color-grey 80%);
-}
+// @include respond (minWidth768){
+//     background: linear-gradient(90deg, $color-grey 20%, $color-white 20%, $color-white 80%, $color-grey 80%);
+// }
+background: $color-tertiary;
 .mission-grid{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -46,11 +46,11 @@
             margin-bottom: 0;
         }
         .mission-item{
-            background: $color-grey;
-            border: 2px solid $color-tertiary;
-            @include respond (maxWidth768){
-                padding: 2rem;
-            }
+            // background: $color-grey;
+            // border: 2px solid $color-tertiary;
+            // @include respond (maxWidth768){
+            //     padding: 2rem;
+            // }
             @include respond (minWidth768){
                 padding: 7rem 4rem 7rem 0;
                 border-radius: 0 50% 50% 0;
@@ -73,11 +73,11 @@
             }
         }
         .vision-item{
-            background: $color-grey;
-            border: 2px solid $color-tertiary;
-            @include respond (maxWidth768){
-                padding: 2rem;
-            }
+            // background: $color-grey;
+            // border: 2px solid $color-tertiary;
+            // @include respond (maxWidth768){
+            //     padding: 2rem;
+            // }
             h2{
                 margin-top: 0;
             }
@@ -109,13 +109,13 @@
     }
 }
 .education-goal{
-    background: $color-tertiary;
+    // background: $color-tertiary;
     h2{
         position: relative;
         &::after{
             @include vector(85px, 84px);
             top: -5rem;
-            mix-blend-mode: color-dodge;
+            // mix-blend-mode: color-dodge;
             transform: scale(0.75);
         }
     }
@@ -123,15 +123,6 @@
         @include respond (minWidth768){
             display: grid;
         grid-template-columns: 67% 30%;
-        &::before{
-            content: "";
-            background: $color-white;
-            position: absolute;
-            left: -99.99%;
-            top: 0;
-            width: 100%;
-            height: 100%;
-        }
         }
         align-items: center;
         position: relative;
