--- a/sass/pages/_program.scss
+++ b/sass/pages/_program.scss
@@ -38,7 +38,7 @@
 }
 .our-facilities{
     @media screen and (min-width:900px) {
-       background-image: linear-gradient(90deg, $color-tertiary 80%, $color-white 20%);
+       background-image: linear-gradient(90deg, $color-tertiary 50%, $color-white 50%);
     }
 }
 .our-facilities #awesome_tab{
@@ -68,6 +68,14 @@
    transition: all 0.5s ease;
 }
 
+.our-facilities .d-flex{
+   display: flex;
+   flex-direction: column;
+   gap: 5rem;
+   @include respond (maxWidth768){
+    display: block;
+   }
+}
 
 
 .our-facilities #awesome_tab .tab_header .item.active {
@@ -207,5 +215,108 @@
     }
     @include respond (maxWidth768){
         padding: 3rem 0;
+    }
+}
+.contact-venue{
+    background: $color-primary;
+    padding: 3rem;
+    &__list{
+        list-style: none;
+    }
+    &__list-item{
+        display: flex;
+    align-items: flex-start;
+    gap: 2.5rem;
+    &:not(:last-child){
+        margin-bottom: 2rem;}
+    }
+    &__list-icon{
+        
+        i{
+            color: #ffffff;
+    font-size: 2rem;
+        }
+    }
+    &__list-text{
+ color: $color-white;
+ a{
+    color: $color-white;
+    font-weight: 500;
+}
+    }   
+}
+.international-committee{
+    .international-grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3rem;
+        @include respond(maxWidth768){
+            grid-template-columns: repeat(1, 1fr);
+        }
+        .international-grid-item{
+            .committee-wrapper{
+                background: $color-white;
+                height: 100%;
+border-radius: 1rem;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.popup-img-wrapper{
+    padding-top: 3rem;
+    position: relative;
+    img{
+        display: block;
+        width: 23.6rem;
+        height: 23.6rem;
+        aspect-ratio: 1;
+        border-radius: 100%;
+        margin: 0 auto 1rem auto;
+        position: relative;
+        z-index: 1;
+        border: 4px solid #28aae4;
+        object-position: top;
+outline: 4px solid #ffffff;
+    }
+    &::before{
+        content: "";
+        background: $color-button;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        border-radius: 1rem;
+        clip-path: polygon(0 0, 100% 0%, 100% 30%, 50% 80%, 0 30%);
+        z-index: 0;
+    }
+    &::after{
+        content: "";
+        background: url(https://dignityeducation.org/fellowship/image/bg-01.jpg);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        border-radius: 1rem;
+        left: 0;
+        clip-path: polygon(0 0, 100% 0%, 100% 30%, 50% 80%, 0 30%);
+        z-index: 0;
+        background-size: cover;
+        background-position: bottom;
+        mix-blend-mode: multiply;
+opacity: 0.2;
+    }
+}
+                .content-wrapper{
+                    padding: 0 2rem 2rem;
+                    .heading-tertiary{
+                        font-size: 2.4rem;
+                        color: $color-button;
+                        font-weight: 400;
+                        margin: 0 auto 1rem;
+                    }
+                    .content-para{
+
+                    }
+                }
+            }
+        }
     }
 }
