--- a/sass/component/_international-visionrs.scss
+++ b/sass/component/_international-visionrs.scss
@@ -5,6 +5,22 @@
     background-repeat: no-repeat;
     min-height: 100vh;
     overflow: hidden;
+    .row{
+        @include respond(maxWidth992){
+            flex-direction: column-reverse;
+            h2.heading-primary {
+                text-align: center;
+                margin-top: 3rem;
+            }
+            .sub-heading {
+                text-align: center;
+                display: block;
+                margin: 0 auto 2rem;
+                width: fit-content;
+            }
+        }
+    }
+
     .banner-top {
         position: relative;
 
@@ -13,15 +29,18 @@
             left: 50px;
             top: 50px;
             transform: translate(0, -100%);
+
             @include respond (maxWidth1200) {
                 @include vector(80.4px, 79.32px);
                 left: 10px;
                 top: 0;
             }
-            @include respond (maxWidth992){
+
+            @include respond (maxWidth992) {
                 left: 30px;
             }
-            @include respond (maxWidth768){
+
+            @include respond (maxWidth768) {
                 display: none;
             }
         }
@@ -30,12 +49,14 @@
             @include vector(69.4px, 70.32px);
             right: 20px;
             bottom: -30px;
+
             @include respond (maxWidth1200) {
                 @include vector(92.4px, 87.32px);
                 right: 40px;
-bottom: -50px;
+                bottom: -50px;
             }
-            @include respond (maxWidth768){
+
+            @include respond (maxWidth768) {
                 display: none;
             }
         }
@@ -50,7 +71,8 @@ bottom: -50px;
         margin-left: auto;
         border-radius: 100%;
         position: relative;
-        .boundless-future{
+
+        .boundless-future {
             position: absolute;
             bottom: 0;
             left: 50%;
@@ -59,32 +81,37 @@ bottom: -50px;
             height: auto;
             border-radius: 0;
         }
-        @include respond (maxWidth1200){
+
+        @include respond (maxWidth1200) {
             width: 40rem;
             height: 40rem;
         }
-        @include respond (maxWidth768){
-            margin-right: auto;
+
+        @include respond (maxWidth992) {
+            margin: auto;
         }
-        @include respond (maxWidth575){
+
+        @include respond (maxWidth575) {
             width: 28rem;
             height: 28rem;
         }
 
         &::after {
             transform: scale(0.5);
-    filter: brightness(41.5);
+            filter: brightness(41.5);
             @include vector(113.4px, 112.32px);
             right: 20px;
-    top: 40px;
-            @include respond (maxWidth1200){
+            top: 40px;
+
+            @include respond (maxWidth1200) {
                 right: -45px;
                 top: 12px;
             }
-            @include respond (maxWidth575){
+
+            @include respond (maxWidth575) {
                 @include vector(50.4px, 48.32px);
-            right: 0;
-            top: 9px;
+                right: 0;
+                top: 9px;
             }
         }
 
@@ -97,7 +124,7 @@ bottom: -50px;
         }
     }
 
-    h4.sub-heading{
+    h4.sub-heading {
         font-size: 1.8rem;
         font-weight: bold;
         color: $color-white;
@@ -106,18 +133,41 @@ bottom: -50px;
         background-color: $color-primary;
         padding: 1rem;
         display: inline-block;
-        @include respond (maxWidth768){
+
+        @include respond (maxWidth768) {
             font-size: 2rem;
         }
     }
-    .content-para{
+
+    .content-para {
         overflow: auto;
+
+        &::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            background-color: lighten($color-primary, $amount: 30);
+        }
+
+        &::-webkit-scrollbar {
+            width: 6px;
+            background-color: lighten($color-primary, $amount: 30);
+        }
+
+        &::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+            background-color: $color-primary;
+        }
+
         @media screen and (min-width:991.9px) {
             max-height: 300px;
+            padding-right: 2rem;
         }
+
         @media screen and (min-width:1199.9px) {
             max-height: 370px;
         }
+
         @media screen and (min-width:1399.9px) {
             max-height: 370px;
         }
